[package]
name = "l4p-tiny"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9.1"
axum = { version = "0.8.9", features = ["json"] }
ipnet = { version = "2.12.0", features = ["serde"] }
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = "0.6.3"
tokio = { version = "1.52.3", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
